# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-159889bbfc7e51163986ea17d8e775b988bfb0dda0153c2eb4a880c85f2fb588.json  query-721236525de79a10590485736b092ac3ecfd807bc99d62574377de5ece3dfa3c.json
configuration/: base.yaml  production.yaml
migrations/: 20241221205456_create_subscriptions_table.sql  20250116231622_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
