[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.15.4"
hyper = "1.5.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
http-body-util = "0.1.2"
reqwest = "0.12.11"
tower = "0.5.2"
