[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
claims = "0.8.0"
config = "0.15.4"
hyper = "1.5.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "3.1.0"
http-body-util = "0.1.2"
once_cell = "1.20.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tower = "0.5.2"
tokio = { version = "1.42.0", features = ["rt", "macros" ] }
wiremock = "0.6.2"
serde_json = "1.0.135"
linkify = "0.10.0"
